--- a/sass/loading.scss
+++ b/sass/loading.scss
@@ -8,6 +8,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    animation: loading .05s;
+    animation-fill-mode: both;
+    z-index: 10000;
+}
+
+@keyframes loading{
+    100%{
+        opacity: 0;
+        z-index: -10;
+    }
 }
 
 .progress {
@@ -21,9 +31,7 @@
         height: 25px;
         width: 100%;
         transform-origin: left;
-        transform: scaleX(0);
-        animation: progress-bar 5000ms 150ms;
-        animation-fill-mode: both;
+        animation: progress-bar 3000ms;
 	}
 }
 
@@ -36,16 +44,16 @@
     }
 }
 
-.loader{
+.load{
 	perspective: 700px;
     text-align: center;
 }
 
-.loader>span{
+.load>span{
 	font-size: 30px;
 	font-family: "Shrikhand",sans-serif;
 	display: inline-block;
-	animation:flip 2.6s infinite linear;
+	animation:flip 3s linear;
 	transform-origin:0 70%;
 	transform-style:preserve-3d;
 	-webkit-transform-style:preserve-3d;
@@ -60,33 +68,33 @@
 	}
 }
 
-.loader>span:nth-child(2){
-	animation-delay: 0.4s;
+.load>span:nth-child(2){
+	animation-delay: 0.3s;
 }
 
-.loader>span:nth-child(3){
-	animation-delay: 0.8s;
+.load>span:nth-child(3){
+	animation-delay: 0.6s;
 }
 
-.loader>span:nth-child(4){
+.load>span:nth-child(4){
+	animation-delay: 0.9s;
+}
+
+.load>span:nth-child(5){
 	animation-delay: 1.2s;
 }
 
-.loader>span:nth-child(5){
-	animation-delay: 1.6s;
+.load>span:nth-child(6){
+	animation-delay: 1.5s
 }
 
-.loader>span:nth-child(6){
-	animation-delay: 2.0s
+.load>span:nth-child(7){
+	animation-delay: 1.8s
+}
+.load>span:nth-child(8){
+	animation-delay: 2.1s
 }
 
-.loader>span:nth-child(7){
+.load>span:nth-child(9){
 	animation-delay: 2.4s
-}
-.loader>span:nth-child(8){
-	animation-delay: 2.8s
-}
-
-.loader>span:nth-child(9){
-	animation-delay: 3.2s
 }
