--- a/sass/button.scss
+++ b/sass/button.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .btn_cta{
     cursor: pointer;
     margin:auto;
@@ -21,4 +23,13 @@
     color:transparent;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
+    &:hover{
+      background:-moz-linear-gradient(top, $primary-color 0%, $secondary-color 100%); 
+      background: -webkit-linear-gradient(top, $primary-color 0%, $secondary-color 100%); 
+      background: linear-gradient(to bottom, $primary-color 0%,$secondary-color 100%);
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color:transparent;
+    }
 } 
