--- a/sass/homepage.css
+++ b/sass/homepage.css
@@ -14,10 +14,10 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-animation: loading .05s;
-          animation: loading .05s;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
+  -webkit-animation: loading 0.01s;
+          animation: loading 0.01s;
+  -webkit-animation-delay: 2.8s;
+          animation-delay: 2.8s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
   z-index: 10000;
@@ -87,8 +87,8 @@
   font-size: 30px;
   font-family: "Shrikhand",sans-serif;
   display: inline-block;
-  -webkit-animation: flip 3s linear;
-          animation: flip 3s linear;
+  -webkit-animation: flip 2.8s linear;
+          animation: flip 2.8s linear;
   -webkit-transform-origin: 0 70%;
           transform-origin: 0 70%;
   transform-style: preserve-3d;
@@ -118,43 +118,43 @@
 }
 
 .load > span:nth-child(2) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+
+.load > span:nth-child(3) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+
+.load > span:nth-child(4) {
   -webkit-animation-delay: 0.3s;
           animation-delay: 0.3s;
 }
 
-.load > span:nth-child(3) {
+.load > span:nth-child(5) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+
+.load > span:nth-child(6) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.load > span:nth-child(7) {
   -webkit-animation-delay: 0.6s;
           animation-delay: 0.6s;
 }
 
-.load > span:nth-child(4) {
-  -webkit-animation-delay: 0.9s;
-          animation-delay: 0.9s;
-}
-
-.load > span:nth-child(5) {
-  -webkit-animation-delay: 1.2s;
-          animation-delay: 1.2s;
-}
-
-.load > span:nth-child(6) {
-  -webkit-animation-delay: 1.5s;
-          animation-delay: 1.5s;
-}
-
-.load > span:nth-child(7) {
-  -webkit-animation-delay: 1.8s;
-          animation-delay: 1.8s;
-}
-
 .load > span:nth-child(8) {
-  -webkit-animation-delay: 2.1s;
-          animation-delay: 2.1s;
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
 }
 
 .load > span:nth-child(9) {
-  -webkit-animation-delay: 2.4s;
-          animation-delay: 2.4s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
 
 header {
@@ -232,6 +232,14 @@ header h1 {
   color: transparent;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: black;
+}
+
+.menu__like:hover {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  background: linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 body {
