--- a/sass/loading.css
+++ b/sass/loading.css
@@ -14,8 +14,10 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-animation: loading .05s;
-          animation: loading .05s;
+  -webkit-animation: loading 0.01s;
+          animation: loading 0.01s;
+  -webkit-animation-delay: 2.8s;
+          animation-delay: 2.8s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
   z-index: 10000;
@@ -85,8 +87,8 @@
   font-size: 30px;
   font-family: "Shrikhand",sans-serif;
   display: inline-block;
-  -webkit-animation: flip 3s linear;
-          animation: flip 3s linear;
+  -webkit-animation: flip 2.8s linear;
+          animation: flip 2.8s linear;
   -webkit-transform-origin: 0 70%;
           transform-origin: 0 70%;
   transform-style: preserve-3d;
@@ -116,42 +118,42 @@
 }
 
 .load > span:nth-child(2) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+
+.load > span:nth-child(3) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+
+.load > span:nth-child(4) {
   -webkit-animation-delay: 0.3s;
           animation-delay: 0.3s;
 }
 
-.load > span:nth-child(3) {
+.load > span:nth-child(5) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+
+.load > span:nth-child(6) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.load > span:nth-child(7) {
   -webkit-animation-delay: 0.6s;
           animation-delay: 0.6s;
 }
 
-.load > span:nth-child(4) {
-  -webkit-animation-delay: 0.9s;
-          animation-delay: 0.9s;
-}
-
-.load > span:nth-child(5) {
-  -webkit-animation-delay: 1.2s;
-          animation-delay: 1.2s;
-}
-
-.load > span:nth-child(6) {
-  -webkit-animation-delay: 1.5s;
-          animation-delay: 1.5s;
-}
-
-.load > span:nth-child(7) {
-  -webkit-animation-delay: 1.8s;
-          animation-delay: 1.8s;
-}
-
 .load > span:nth-child(8) {
-  -webkit-animation-delay: 2.1s;
-          animation-delay: 2.1s;
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
 }
 
 .load > span:nth-child(9) {
-  -webkit-animation-delay: 2.4s;
-          animation-delay: 2.4s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
 /*# sourceMappingURL=loading.css.map */
