--- a/sass/loading.scss
+++ b/sass/loading.scss
@@ -8,7 +8,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    animation: loading .05s;
+    animation: loading 0.01s;
+    animation-delay: 2.8s;
     animation-fill-mode: both;
     z-index: 10000;
 }
@@ -53,7 +54,7 @@
 	font-size: 30px;
 	font-family: "Shrikhand",sans-serif;
 	display: inline-block;
-	animation:flip 3s linear;
+	animation:flip 2.8s linear;
 	transform-origin:0 70%;
 	transform-style:preserve-3d;
 	-webkit-transform-style:preserve-3d;
@@ -69,32 +70,32 @@
 }
 
 .load>span:nth-child(2){
-	animation-delay: 0.3s;
+	animation-delay: 0.1s;
 }
 
 .load>span:nth-child(3){
-	animation-delay: 0.6s;
+	animation-delay: 0.2s;
 }
 
 .load>span:nth-child(4){
-	animation-delay: 0.9s;
+	animation-delay: 0.3s;
 }
 
 .load>span:nth-child(5){
-	animation-delay: 1.2s;
+	animation-delay: 0.4s;
 }
 
 .load>span:nth-child(6){
-	animation-delay: 1.5s
+	animation-delay: 0.5s
 }
 
 .load>span:nth-child(7){
-	animation-delay: 1.8s
+	animation-delay: 0.6s
 }
 .load>span:nth-child(8){
-	animation-delay: 2.1s
+	animation-delay: 0.7s
 }
 
 .load>span:nth-child(9){
-	animation-delay: 2.4s
+	animation-delay: 0.8s
 }
