--- a/sass/button.scss
+++ b/sass/button.scss
@@ -1,35 +1,70 @@
 @import 'variables';
 
 .btn_cta{
-    cursor: pointer;
-    margin:auto;
-    margin-top:40px;
-    margin-bottom: 40px;
-    box-shadow: 0px 5px 5px lightgray;
-    color:white;
-    padding:15px;
-    padding-left: 80px;
-    padding-right: 80px;
-    border-radius: 30px;
-    background: linear-gradient(173deg, rgba(255, 121, 218, 1) 0%, rgba(214, 108, 219, 1) 39%, rgba(171, 94, 220, 1) 85%, rgba(155, 89, 220, 1) 100%);
-    &:hover {
-      background-color: white;
-      box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.50);
+  cursor: pointer;
+  margin:auto;
+  margin-top:40px;
+  margin-bottom: 40px;
+  box-shadow: 0px 5px 5px lightgray;
+  color:white;
+  max-width:200px;
+  width:100%;
+  padding:15px;
+  padding-left: 80px;
+  padding-right: 80px;
+  border-radius: 30px;
+  background: linear-gradient(173deg, rgba(255, 121, 218, 1) 0%, rgba(214, 108, 219, 1) 39%, rgba(171, 94, 220, 1) 85%, rgba(155, 89, 220, 1) 100%);
+  &:hover {
+    background-color: white;
+    box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.50);
+  }
+}
+
+.menu__btn{
+  border: 0px;
+  background-color:transparent;
+  position: relative;
+  margin: 30px 30px 0px 10px;
+  &:hover{
+    &>.menu__like{
+      &--bnw{
+        opacity:0;
+      }
+      &--color{
+        opacity:1;
+        transform: scale(1);
+      }
     }
   }
+}
 
-  .menu__like{
-    cursor: pointer;
-    color:transparent;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: black;
-    &:hover{
-      background:-moz-linear-gradient(top, $primary-color 0%, $secondary-color 100%); 
-      background: -webkit-linear-gradient(top, $primary-color 0%, $secondary-color 100%); 
-      background: linear-gradient(to bottom, $primary-color 0%,$secondary-color 100%);
+.menu__like{
+  font-size:20px;
+
+  &--bnw{
+    left:0;
+    bottom:0;
+    cursor:pointer;
+    position: absolute;
+    opacity:1;
+    transition: opacity ease-in-out 300ms;
+  }
+  &--color{
+    left:0;
+    bottom:0;
+    cursor:pointer;
+    position: absolute;
+    opacity:0;
+    transform: scale(0);
+    transition: opacity ease-in-out 300ms, transform 1000ms cubic-bezier(.32,0,.07,1);
+    &::before{
+      background:-moz-linear-gradient(top, #9356DC 0%, #FF79DA 100%); 
+      background: -webkit-linear-gradient(top, #9356DC 0%, #FF79DA 100%); 
+      background: linear-gradient(to bottom, #9356DC 0%,#FF79DA 100%);
       -webkit-background-clip: text;
       -moz-background-clip: text;
       background-clip: text;
       -webkit-text-fill-color:transparent;
     }
-} 
+  }
+}
