--- a/sass/menupages.scss
+++ b/sass/menupages.scss
@@ -3,31 +3,19 @@
 @import 'footer';
 @import 'button';
 
-body{
-    font-family: "Roboto";
-    margin:0px;
-}
-  
-a{
-    text-decoration:none;
+.header-withArrow{
+    position:relative;
 }
 
-.container {
-    max-width: 800px;
-    margin:auto;
-}
-
-.header{
-    &__arrow{
-        font-size: 1.7rem;
-        color: black;
-        left: 20px;
-        top: 32px;
-        display:flex;
-        position: absolute;
-        align-items:center;
-        justify-content:center;
-    }
+.header__arrow{
+    position: absolute;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: 1.7rem;
+    color: black;
+    top:33px;
+    left: 10px;
 }
 
 .heroImg {
@@ -37,7 +25,7 @@ a{
     object-fit: cover;
 }
 
-.menu{
+.plat{
     margin-top: -50px;
     border-radius: 30px 30px 0 0;
     background-color: #f9f9f9;
@@ -45,16 +33,13 @@ a{
     position: relative;
 
     &__header{
-        padding: 30px 50px 0px 20px;
+        padding: 30px 20px 0px 20px;
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
     &__title{
         font-family: Shrikhand,"cursive";
-    }
-    &__like{
-        font-size:30px;
     }
 }
 
@@ -89,7 +74,6 @@ a{
     &__name{
         margin:0px 0px 5px 0px;
         font-weight:700;
-        font-size: large;
     }
     &__description{
         margin:0px;
@@ -101,27 +85,27 @@ a{
     }
     &__price{
         margin:0px;
-        font-weight: 900;  
-        margin-right: 20px;     
+        margin-right:4px;
+        font-weight: 900;     
         animation: boxReverse 400ms linear both;
     } 
 
     &__confirmation{
-        position:relative;
         background-color: $tertiary-color;
-        width: 130px;
-        margin: -46px -10px -20px 0px;
+        margin: -46px 0px -20px 0px;
         border-radius: 0 20px 20px 0px;
         animation: boxReverse 400ms linear both;
+        align-items: center;
+        justify-content: center;
+        width:80px;
     }
 
     &__wrapIcon{
         width: 30px;
         height: 30px;
         background: white;
-        margin-left: 25px;
+        margin:27px;
         border-radius: 100px;
-        margin-top: 30px;
         transform: rotate(150deg);
         transition-duration: .5s;
     }
@@ -197,6 +181,9 @@ a{
     }
 }
 
+.delay-1{
+    animation: delay 0.8s;
+}
 .delay-1{
     animation: delay 1.2s;
 }
