--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .progress-container {
   position: fixed;
   height: 100%;
@@ -196,9 +195,9 @@ header h1 {
   background: -moz-linear-gradient(top, #9356DC 0%, #FF79DA 100%);
   background: -webkit-linear-gradient(top, #9356DC 0%, #FF79DA 100%);
   background: linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
+  -webkit-background-clip: initial;
+  -moz-background-clip: initial;
+  background-clip: initial;
   -webkit-text-fill-color: transparent;
 }
 
@@ -299,9 +298,9 @@ header h1 {
   background: -moz-linear-gradient(top, #9356DC 0%, #FF79DA 100%);
   background: -webkit-linear-gradient(top, #9356DC 0%, #FF79DA 100%);
   background: linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
+  -webkit-background-clip: initial;
+  -moz-background-clip: initial;
+  background-clip: initial;
   -webkit-text-fill-color: transparent;
 }
 
@@ -366,7 +365,7 @@ header h1 {
   padding: 20px 0px 20px 10px;
   border-radius: 20px;
   margin: 15px 0;
-  box-shadow: 4px lightgrey;
+  box-shadow: 0px 3px 10px lightgrey;
   max-width: 100%;
   cursor: pointer;
 }
@@ -578,7 +577,7 @@ a {
   margin: auto;
   margin-top: 30px;
   max-width: 450px;
-  width: 100ù;
+  width: 100%;
   padding: 12px;
   border-radius: 24px;
   background: #f9f9f9;
