--- a/sass/button.scss
+++ b/sass/button.scss
@@ -61,9 +61,9 @@
       background:-moz-linear-gradient(top, #9356DC 0%, #FF79DA 100%); 
       background: -webkit-linear-gradient(top, #9356DC 0%, #FF79DA 100%); 
       background: linear-gradient(to bottom, #9356DC 0%,#FF79DA 100%);
-      -webkit-background-clip: text;
-      -moz-background-clip: text;
-      background-clip: text;
+      -webkit-background-clip: initial;
+      -moz-background-clip: initial;
+      background-clip: initial;
       -webkit-text-fill-color:transparent;
     }
   }
