--- a/sass/main.scss
+++ b/sass/main.scss
@@ -74,7 +74,7 @@ a{
     margin: auto;
     margin-top: 30px;
     max-width: 450px;
-    width:100ù;
+    width:100%;
     padding: 12px;
     border-radius: 24px;
     background: #f9f9f9;
