--- a/sass/menupages.scss
+++ b/sass/menupages.scss
@@ -66,7 +66,7 @@
         padding: 20px 0px 20px 10px;
         border-radius:20px;
         margin: 15px 0;
-        box-shadow: 4px lightgrey;
+        box-shadow: 0px 3px 10px lightgrey;
         max-width: 100%;
         cursor:pointer;
     }
