--- a/css/style.css
+++ b/css/style.css
@@ -195,9 +195,9 @@ header h1 {
   background: -moz-linear-gradient(top, #9356DC 0%, #FF79DA 100%);
   background: -webkit-linear-gradient(top, #9356DC 0%, #FF79DA 100%);
   background: linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
-  -webkit-background-clip: content-box;
-  -moz-background-clip: content-box;
-  background-clip: content-box;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
